first lesson  html

--- a/.frontendMain/index.html
+++ b/.frontendMain/index.html
@@ -10,6 +10,70 @@
       Hello world
     </h1>
     <p style="color: blue; font-size: large">Lets go coding</p>
+  <a href="#descr">Перейти к описанию</a>
+    <ul>
+    <li>READY
+      <li>TO
+        <li>GO</li>
+      </li>
+    </li>
+  </ul>
+  <ul >
+  <li>GO</li>
+  <li>GO</li>
+  <li>GO</li></ul>
+  <ol type="1" start="3">
+  <li><p>HI</p></li>
+  <li><p>HI</p></li>
+  <li><p>HI</p></li>
+  <li><p>HI</p></li></ol>
+  <img src="https://images.techinsider.ru/upload/img_cache/6f0/6f0026a1d78341ec91e2f98181aef7f0_cropped_666x664.jpg" alt="Erth" width="300">
+  <br>
+  <a href="https://github.com/AfAlina190?tab=repositories">
+    <br>MY PAGE
+  </a> 
+
+  <img src="./" alt="">
+
+  <a href="https://www.youtube.com/" target="_blank">
+    <br>MY SECOND PAGE
+  </a> 
+  <h3 id="descr">Описание</h3>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nemo magnam illum deserunt vitae quisquam quidem, a eligendi corporis ad, quis distinctio esse!Sunt atque, incidunt laudantium suscipit molestiae rem!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A atque possimus dolor aliquid alias, tempore facere eius! In magnam voluptates, eaque sed laudantium, optio vero dignissimos fuga unde ex eum molestiae cum ut! Harum dignissimos quae necessitatibus ipsam quam labore officiis, quo quia sint obcaecati tempore repellendus nostrum cupiditate error cumque debitis aliquid vitae ut, eaque laudantium temporibus. Dignissimos doloremque debitis deserunt nobis alias ipsam corrupti, tenetur maiores eius praesentium! Error labore recusandae iure nisi sint corrupti, assumenda est aut. Dolores officia adipisci cumque ratione velit earum facere, dolorum tempore, necessitatibus eos eligendi nihil harum similique vitae. Esse ducimus accusamus ex minus, expedita odio fuga ullam tempora libero ipsa eum consectetur a ipsam ut qui quasi quam quas harum quia. Itaque in reiciendis ipsam, quo laborum, fugit autem temporibus totam harum ducimus sunt. Minus aliquam laborum inventore blanditiis asperiores assumenda placeat veniam. Nesciunt excepturi repudiandae officiis obcaecati? Saepe vitae libero dolore perspiciatis ullam maxime nobis cum laudantium quasi suscipit aperiam quibusdam qui, nihil ipsam molestias aliquid adipisci impedit placeat repellat facere eaque quos similique? Tempora, nulla? Ut quibusdam eius minima, vero rerum dolores consequuntur nam ea earum iusto rem magni incidunt maxime perspiciatis corrupti possimus accusamus animi sequi non. Quo, tempora animi aliquid repellendus eaque odit quam est laborum molestias magni, consectetur nostrum quis. Voluptatum earum dolore aspernatur ea reprehenderit repellendus perferendis illum tempore quibusdam? Fugit eaque molestiae eos, nobis voluptates expedita maiores, incidunt tempore odit esse vel officia qui, accusamus minima quam sapiente? Nesciunt excepturi rerum vel maxime! Laboriosam eius explicabo quas magni omnis, voluptatibus repudiandae animi saepe libero nesciunt natus deleniti cumque, similique eum obcaecati praesentium. Dicta quam vitae voluptatem neque magni nam facilis aspernatur ducimus, odio necessitatibus, optio est, quidem quod consectetur hic iure autem maiores aliquid aut alias quas harum repudiandae. Repellendus dolores laudantium eveniet consequatur cum sunt, perspiciatis veniam est assumenda? Distinctio, laudantium porro deleniti commodi praesentium voluptas quo dicta ad est expedita ducimus, blanditiis minima sequi voluptates alias neque fugiat. Ducimus accusamus vero fuga quasi. Quia aperiam fugit incidunt ab velit debitis. Rerum, illum, culpa maxime accusantium ea voluptates architecto placeat ut debitis aliquam illo. Perferendis temporibus asperiores non impedit provident iste dolores fugit, necessitatibus illo dignissimos expedita quidem nobis unde harum cumque molestiae veniam quo! Sit, illum. Quas, quos explicabo porro doloribus optio rem minus dolore temporibus pariatur, officiis inventore laudantium sunt. Minus corrupti nihil aspernatur laborum eum, ad exercitationem officia aperiam, necessitatibus fugit similique in facere temporibus. Vitae reprehenderit architecto, voluptatibus totam rem delectus, impedit libero ullam molestiae possimus, consequatur a cupiditate incidunt est natus neque perspiciatis voluptates. Sint, alias! Delectus laborum labore natus enim fugit ipsam repudiandae nemo facilis doloremque amet, numquam ea aperiam magni quaerat nulla iusto, quas quam cum iste similique libero quidem dolorum beatae earum? Eligendi ab incidunt exercitationem ea, illo deserunt necessitatibus veniam autem consequuntur mollitia, debitis aliquam ex provident tempore porro suscipit cumque a impedit magni pariatur, minima distinctio ipsa tempora cupiditate. Aspernatur, suscipit quisquam. Natus nihil perspiciatis modi quibusdam eius quidem officia repellendus, possimus fugiat debitis accusantium pariatur a praesentium aperiam quisquam est veniam consequatur. Nobis earum, obcaecati deleniti incidunt vel quasi. Vero fuga eius dolores aut temporibus nihil sit ex dolorem tempora voluptate dolorum expedita, voluptatibus, sunt quidem quia maxime! Consectetur harum ipsum deleniti, illum nostrum sit! Omnis nostrum nihil quasi, molestias harum provident, recusandae, illo quas alias enim laborum nam quis perspiciatis aspernatur dicta! Nobis esse doloremque itaque neque perferendis libero temporibus nam velit, assumenda cumque? Iusto, recusandae, eaque quam quos incidunt corporis voluptatibus harum dolor cum perferendis nulla ab fugiat? Fuga, voluptas! Voluptate ipsa fugiat ex cumque quasi labore, atque quaerat voluptates. Sapiente, doloribus perspiciatis! Aut natus facere earum alias. Ab corporis ipsam temporibus! Distinctio, deserunt modi voluptate facere, hic officiis nostrum enim labore vitae assumenda quas sed officia maiores voluptates rerum maxime numquam ab aperiam. Aut et minus veritatis ipsa assumenda molestias, quia, suscipit unde, tenetur pariatur distinctio quasi praesentium perspiciatis amet ex dicta quisquam repellendus cupiditate provident optio consectetur. Tempore vero rerum officia. Reprehenderit corporis velit maiores, dolor modi molestias quasi, officiis nemo itaque quaerat molestiae eius, eaque repellat est? Pariatur, minima. Officia corrupti consequuntur officiis aut quod quisquam ea dolorum magnam consectetur. Corrupti totam sunt maiores voluptatibus fuga neque a! Sint unde cupiditate libero eaque ut molestias deleniti at incidunt vel aperiam illum voluptate maiores aliquam, doloremque itaque reiciendis quia, corrupti expedita magni accusamus. Aspernatur voluptatum tempora voluptas optio ipsam rerum tempore vitae veniam exercitationem vero inventore non qui ea, at recusandae. Sint eos assumenda quae deserunt magni laborum ipsam culpa, quos id maxime ducimus eveniet quo mollitia pariatur nobis, vero ab illum minima, itaque libero modi labore! Obcaecati quod natus fuga non minus aut vel neque ex quisquam dicta quam, nesciunt eum ipsa temporibus facilis voluptas distinctio necessitatibus aliquid fugit quia doloribus cumque corrupti. Non impedit quae est laborum illum nam vero corporis dignissimos nobis aut pariatur optio, doloribus iste ab facilis fuga? Illum eos, explicabo ab iure sit quisquam suscipit magni? Consectetur commodi suscipit nostrum laboriosam repudiandae aperiam tempore, soluta iste ex quo. Voluptate, magnam ipsa expedita quibusdam quasi qui error sed illo odio eveniet reiciendis libero sapiente sit quisquam quod quam dicta eos maxime unde rem nisi saepe aspernatur culpa! Accusantium hic voluptatem deleniti accusamus corporis minus architecto consequuntur delectus exercitationem dolore harum, iste tempora officiis aliquid ab cum libero amet eius! Fugit at eveniet quis veritatis vero enim. Molestiae impedit minus, consequuntur nam atque, voluptatum itaque tenetur ipsa, quisquam deleniti excepturi repellat temporibus sequi reiciendis suscipit fugit corporis quod aliquam similique? Veritatis dolor nemo, ullam laboriosam minima incidunt porro atque quaerat amet mollitia sunt consequatur voluptas magni consectetur natus iusto inventore beatae sed libero aut reiciendis? Ipsa temporibus rerum eligendi eos at officiis, laudantium nemo quo placeat, cupiditate fugit, quod ut vel ad! Cumque, repellat porro reprehenderit modi illum saepe quia, qui perspiciatis suscipit et id facere! Temporibus saepe quis, unde reprehenderit asperiores, aspernatur dolores voluptatem illo qui, sunt itaque sed beatae exercitationem. Optio nisi ipsum voluptas error numquam enim deleniti, perferendis rem nulla maiores!pariat 
+    <p>HELLO</p></p>
+  <p>Hello 2222</p>
+
+  <table border="1">
+    <tr>
+      <th>Заголовок 1</th>
+      <th>Заголовок 2</th>
+      <th>Заголовок 3</th>
+      <th>Заголовок 4</th>
+      <th>Заголовок 5</th>
+    </tr>
+    <tr>
+      <td><img src="https://images.techinsider.ru/upload/img_cache/6f0/6f0026a1d78341ec91e2f98181aef7f0_cropped_666x664.jpg" alt="ERTH" width="100"></td>
+      <td><img src="https://ecooboi.com.ua/files/cache/a0/e7/ce/ecooboi-planeta-zemlya-1595505344.jpg" alt="ERTH" width="100"></td>
+      <td><img src="https://b1.m24.ru/c/1737478.jpg" alt="ERTH" width="100"></td>
+      <td><img src="https://www.rbc.ua/static/img/_/_/____41180_1200x675.jpg" alt="ERTH" width="100"></td>
+      <td><img src="https://avatars.dzeninfra.ru/get-zen_doc/9703143/pub_6467e9de8512584c0ea66bbe_6467eb10cb271658dbc96782/scale_1200" alt="ERTH" width="100"></td>
+    </tr>
+    <tr>
+      <td>Column 1</td>
+      <td>Column 2</td>
+      <td>Column 3</td>
+      <td>Column 4</td>
+      <td>Column 5</td>
+    </tr>
+    <tr>
+      <td>Var 1</td>
+      <td>Var 2</td>
+      <td>Var 3</td>
+      <td>Var 4</td>
+      <td>Var 5</td>
+    </tr>
+  </table>
   </body>
 </html>
 
