--- a/.frontendMain/index.html
+++ b/.frontendMain/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    Hello world
+    <h1>Frontend course</h1>
+    <ul>
+        <li><a href="./lessons/lesson_2/"></a></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 </html>
